--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
                     </div>
                 </div>
                 <div class="main_slide_arrows">
-                    <button class="left_arrow btn_o">
+                    <button class="btn_o">
                         <i class="xi-arrow-left"></i>
                     </button>
-                    <button class="right_arrow btn_o">
+                    <button class="btn_o">
                         <i class="xi-arrow-right"></i>
                     </button>
                 </div>
@@ -114,6 +114,74 @@
                 <div class="main_slide_num">
                     <span>1</span> / <strong>3</strong>
                 </div>
+                <div class="main_slide_play">
+                    <button class="btn_o"><i class="xi-play"></i></button>
+                    <button class="btn_o"><i class="xi-pause"></i></button>
+                </div>
+                <div class="main_slide_pic">
+                    main_slide_pic
+                </div>
+            </section>
+            <section class="mainEvent sec">
+                <div class="tit">
+                    <h2>JEWELLERY COLLECTION EVENT</h2>
+                    <strong class="tit_dec">모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷, 스톤 그리고 색상들을 멋진 조합으로
+                        선사합니다.</strong>
+                </div>
+                <div class="flex_inner">
+                    <figure data-aos="fade-up" data-aos-delay="300">
+                        <div class="scale_box">
+                            <img src="./img/lesedilarona01.jpg" alt="">
+                        </div>
+                        <p class="p_dec">스톤 그리고 색상들을 멋진 조합</p>
+                        <a href="#!" class="btn">구매하기</a>
+                    </figure>
+                    <figure data-aos="fade-up" data-aos-delay="600">
+                        <div class="scale_box">
+                            <img src="./img/lesedilarona02.jpg" alt="">
+                        </div>
+                        <p class="p_dec">스톤 그리고 색상들을 멋진 조합</p>
+                        <a href="#!" class="btn">구매하기</a>
+                    </figure>
+                    <figure data-aos="fade-up" data-aos-delay="900">
+                        <div class="scale_box">
+                            <img src="./img/lesedilarona03.jpg" alt="">
+                        </div>
+                        <p class="p_dec">스톤 그리고 색상들을 멋진 조합</p>
+                        <a href="#!" class="btn">구매하기</a>
+                    </figure>
+                </div>
+            </section>
+            <section class="mainBanner sec">
+                <div class="tit">
+                    <h2>JEWELLERY COLLECTION EVENT</h2>
+                    <strong class="tit_dec">모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷, 스톤 그리고 색상들을 멋진 조합으로
+                        선사합니다.</strong>
+                    <a href="#!"><span>more</span><i class="xi-arrow-right"></i></a>
+                </div>
+            </section>
+            <section class="mainPromotion sec">
+                <div class="flex_inner">
+                    <div class="movie">
+                        <div class="label">
+                            <span>NEW</span>
+                        </div>
+                        <video src="./img/movie.mp4"></video>
+                    </div>
+                    <div class="promotion_dec">
+                        <div class="tit">
+                            <h2>JEWELLERY COLLECTION EVENT</h2>
+                            <strong class="tit_dec">모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷, 스톤 그리고
+                                색상들을 멋진
+                                조합으로
+                                선사합니다.</strong>
+                            <div class="promotion_play">
+                                <button class="btn_o"><i class="xi-play"></i></button>
+                                <button class="btn_o"><i class="xi-pause"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
 
@@ -121,7 +189,9 @@
         <footer class="footer"></footer>
 
     </div>
-
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
