--- a/index.html
+++ b/index.html
@@ -183,6 +183,181 @@
                     </div>
                 </div>
             </section>
+            <section class="mainYoutube sec mbg">
+                <div class="flex_inner">
+                    <div class="left">
+                        <div class="tit">
+                            <h2>JEWELLERY COLLECTION EVENT</h2>
+                            <strong class="tit_dec">모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷, 스톤 그리고
+                                색상들을 멋진
+                                조합으로
+                                선사합니다.</strong>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="youtube_case">
+                            <iframe width="1280" height="720" src="https://www.youtube.com/embed/egqvF0lTuTg"
+                                title="Graff Wishes | Graff" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="mainYoutubeBg sec">
+                <div class="tit">
+                    <h2>JEWELLERY COLLECTION EVENT</h2>
+                    <strong class="tit_dec">모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷, 스톤 그리고 색상들을 멋진 조합으로
+                        선사합니다.</strong>
+                    <div class="ytp_controller">
+                        <button class="btn_o pause"><i class="xi-pause"></i></button>
+                        <button class="btn_o play"><i class="xi-play"></i></button>
+                    </div>
+                </div>
+                <div id="bgndVideo" class="player"></div>
+            </section>
+            <section class="mainProduct sec">
+                <div class="tit">
+                    <h2>JEWELLERY COLLECTION EVENT</h2>
+                    <strong class="tit_dec">모던하면서도 클래식한 디자인들을 완벽하게 표현한 그라프 하우스의 시그너쳐 컬렉션은 다양한 컷, 스톤 그리고 색상들을 멋진 조합으로
+                        선사합니다.</strong>
+                    <div class="inner">
+                        <div class="product_slide">
+                            <figure>
+                                <a href="">
+                                    <div class="case">
+                                        <img src="./img/lesedilarona01.jpg" alt="">
+                                    </div>
+                                    <div class="dec">모던하면서도 클래식한</div>
+                                    <button class="order_btn">구매하기</button>
+                                </a>
+                            </figure>
+                            <figure>
+                                <a href="">
+                                    <div class="case">
+                                        <img src="./img/lesedilarona02.jpg" alt="">
+                                    </div>
+                                    <div class="dec">모던하면서도 클래식한</div>
+                                    <button class="order_btn">구매하기</button>
+                                </a>
+                            </figure>
+                            <figure>
+                                <a href="">
+                                    <div class="case">
+                                        <img src="./img/lesedilarona03.jpg" alt="">
+                                    </div>
+                                    <div class="dec">모던하면서도 클래식한</div>
+                                    <button class="order_btn">구매하기</button>
+                                </a>
+                            </figure>
+                            <figure>
+                                <a href="">
+                                    <div class="case">
+                                        <img src="./img/lesedilarona04.jpg" alt="">
+                                    </div>
+                                    <div class="dec">모던하면서도 클래식한</div>
+                                    <button class="order_btn">구매하기</button>
+                                </a>
+                            </figure>
+                            <figure>
+                                <a href="">
+                                    <div class="case">
+                                        <img src="./img/lesedilarona05.jpg" alt="">
+                                    </div>
+                                    <div class="dec">모던하면서도 클래식한</div>
+                                    <button class="order_btn">구매하기</button>
+                                </a>
+                            </figure>
+                            <figure>
+                                <a href="">
+                                    <div class="case">
+                                        <img src="./img/lesedilarona06.jpg" alt="">
+                                    </div>
+                                    <div class="dec">모던하면서도 클래식한</div>
+                                    <button class="order_btn">구매하기</button>
+                                </a>
+                            </figure>
+
+                        </div>
+                        <div class="product_slide_controller">
+                            <button class="btn_o">
+                                <i class="xi-angle-left"></i>
+                            </button>
+                            <ul class="slide_dots">
+                                <li><button>01</button></li>
+                                <li><button>02</button></li>
+                                <li><button>03</button></li>
+                                <li><button>04</button></li>
+                                <li><button>05</button></li>
+                            </ul>
+                            <button class="btn_o">
+                                <i class="xi-angle-right"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+            <section class="mainCustomer">
+                <div class="flex_inner">
+                    <div class="left">
+                        <div class="mainTab">
+                            <ul class="main_tab_menu">
+                                <li class="on"><button class="btn_o">MENU01</button></li>
+                                <li><button class="btn_o">MENU02</button></li>
+                                <li><button class="btn_o">MENU03</button></li>
+                            </ul>
+                            <ul class="main_tab_content">
+                                <li class="on">
+                                    <ul>
+                                        <li><a href="">01 . Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        </li>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        </li>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing
+                                                elit.\</a></li>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        </li>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <ul>
+                                        <li><a href="">02 . Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        </li>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        </li>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing
+                                                elit.\</a></li>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        </li>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <ul>
+                                        <li><a href="">03 . Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        </li>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        </li>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing
+                                                elit.\</a></li>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        </li>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="right">
+                        responsive map
+                    </div>
+                </div>
+            </section>
         </main>
 
         <!-- footer -->
