--- a/index.html
+++ b/index.html
@@ -66,8 +66,12 @@
                     <form action="">
                         <input type="text" placeholder="검색어를 입력하세요">
                         <button><i class="xi-search"></i></button>
-
                     </form>
+                </div>
+                <div class="m_open">
+                    <button class="m_btn">
+                        <span>mobile open button</span>
+                    </button>
                 </div>
             </div>
         </header>
@@ -100,10 +104,10 @@
                 </div>
                 <div class="main_slide_arrows">
                     <button class="btn_o">
-                        <i class="xi-arrow-left"></i>
+                        <i class="xi-angle-left"></i>
                     </button>
                     <button class="btn_o">
-                        <i class="xi-arrow-right"></i>
+                        <i class="xi-angle-right"></i>
                     </button>
                 </div>
                 <ul class="main_slide_dots">
@@ -298,7 +302,7 @@
                 </div>
 
             </section>
-            <section class="mainCustomer">
+            <section class="mainCustomer sec mbg">
                 <div class="flex_inner">
                     <div class="left">
                         <div class="mainTab">
@@ -309,44 +313,83 @@
                             </ul>
                             <ul class="main_tab_content">
                                 <li class="on">
-                                    <ul>
-                                        <li><a href="">01 . Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                    <ul class="content">
+                                        <li><a href="#!">01 . Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span>
                                         </li>
-                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        <li><a href="#!">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span>
                                         </li>
-                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing
-                                                elit.\</a></li>
-                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        <li><a href="#!">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span></li>
+                                        <li><a href="#!">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span>
                                         </li>
-                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        <li><a href="#!">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span>
+                                        </li>
+                                        <li><a href="#!">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span>
+                                        </li>
+                                        <li><a href="#!">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span>
                                         </li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <ul>
-                                        <li><a href="">02 . Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                    <ul class="content">
+                                        <li><a href="">02 . Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span>
                                         </li>
-                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span>
                                         </li>
-                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing
-                                                elit.\</a></li>
-                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span></li>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span>
                                         </li>
-                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span>
                                         </li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <ul>
-                                        <li><a href="">03 . Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                    <ul class="content">
+                                        <li><a href="">03 . Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span>
                                         </li>
-                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span>
                                         </li>
-                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing
-                                                elit.\</a></li>
-                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span></li>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span>
                                         </li>
-                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span>
+                                        </li>
+                                        <li><a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Nostrum sapiente quos amet eos odio quibusdam
+                                                impedit.</a><span>[2023.01.03]</span>
                                         </li>
                                     </ul>
                                 </li>
@@ -354,14 +397,76 @@
                         </div>
                     </div>
                     <div class="right">
-                        responsive map
+                        <div class="responsive_case">
+                            <!-- * 카카오맵 - 지도퍼가기 -->
+                            <!-- 1. 지도 노드 -->
+                            <div id="daumRoughmapContainer1672704979950"
+                                class="root_daum_roughmap root_daum_roughmap_landing"></div>
+
+                            <!--
+	2. 설치 스크립트
+	* 지도 퍼가기 서비스를 2개 이상 넣을 경우, 설치 스크립트는 하나만 삽입합니다.
+-->
+                            <script charset="UTF-8" class="daum_roughmap_loader_script"
+                                src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
+
+                            <!-- 3. 실행 스크립트 -->
+                            <script charset="UTF-8">
+                                new daum.roughmap.Lander({
+                                    "timestamp": "1672704979950",
+                                    "key": "2d9mf",
+                                    //"mapWidth": "640",
+                                    //"mapHeight": "360"
+                                }).render();
+                            </script>
+                        </div>
                     </div>
                 </div>
             </section>
         </main>
 
         <!-- footer -->
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="top">
+                <div class="inner">
+                    <ul class="lnk">
+                        <li><a href="">이용약관</a></li>
+                        <li><a href="">문의하기</a></li>
+                        <li class="b"><a href="">개인정보 취급방침</a></li>
+                        <li><a href="">방문 예약하기</a></li>
+                        <li><a href="">사이즈 가이드</a></li>
+                        <li><a href="">그라프 하우스 소개</a></li>
+                    </ul>
+                    <ul class="sns">
+                        <li><a href="http://google.com" target="_blank"><i class="xi-kakaotalk"></i></a></li>
+                        <li><a href="http://google.com" target="_blank"><i class="xi-facebook"></i></a></li>
+                        <li><a href="http://google.com" target="_blank"><i class="xi-instagram"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="inner">
+                    <address>
+                        <a href="tel:051-783-2317">전화번호 : 051-783-2317</a> <br class="mbr" />
+                        &nbsp;&nbsp;
+                        이메일 : <a href="mailto:thgml1293@hanmail.net">thgml1293@hanmail.net</a>
+                        <br class="mbr" />&nbsp;&nbsp;
+                        Graff France Headquarters 237 rue
+                        Saint-Honore Paris 75001
+                    </address>
+                    <div class="f_link">
+                        <form id="f_link">
+                            <select>
+                                <option value="">FAMLIY LINK</option>
+                                <option value="http://google.com">google</option>
+                                <option value="http://daum.net">daum</option>
+                                <option value="http://naver.com">naver</option>
+                            </select>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
     </div>
     <script>
