--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
                         <button><i class="xi-search"></i></button>
                     </form>
                 </div>
+                <div class="search_toggle">
+                    <button class="btn_o">
+                        <i class="xi-search"></i>
+                    </button>
+                </div>
                 <div class="m_open">
                     <button class="m_btn">
                         <span>mobile open button</span>
@@ -467,7 +472,9 @@
                 </div>
             </div>
         </footer>
-
+        <div class="to_top">
+            <button class="btn_o"><i class="xi-arrow-top"></i></button>
+        </div>
     </div>
     <script>
         AOS.init();
